基本图文组件完成

--- a/test/test_valid.html
+++ b/test/test_valid.html
@@ -24,8 +24,8 @@
     <!-- 用于验证 fullpage.js 切换野蛮，以及内容组织结构可用，组件能够进行动画 -->
     <div id="h5">
         <div class="page section" id="page-1">
-            <div class="component log hide">logo</div>
-            <div class="component slogan hide">slogan</div>
+            <div class="component log">logo</div>
+            <div class="component slogan">slogan</div>
         </div>
         <div class="page section" id="page-2">
             <div class="component desc hide">描述</div>
