--- a/test/test_H5ComponentBar.html
+++ b/test/test_H5ComponentBar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
     <link rel="stylesheet" href="./../css/H5ComponentBase.css">
-    <!-- 引入散点图的资源-->
-    <link rel="stylesheet" href="./../css/H5ComponentPoint.css">
+    <!-- 引入柱图的资源-->
+    <link rel="stylesheet" href="./../css/H5ComponentBar.css">
     <title>Document</title>
     <style>
         body{
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-   <!--  用于开发测试 H5ComponentBase 对象(基本的图文组件) -->
+   <!--  用于开发测试 H5ComponentBase 对象(柱图组件) -->
    <div class="iphone">
       
    </div>
@@ -34,35 +34,39 @@
     <script src='./../js/lib/jquery-ui.min.js'></script>
     <script src='./../js/lib/jquery.fullPage.js'></script>
     <script src='./../js/H5ComponentBase.js'></script>
-    <!-- 引入散点图的资源-->
-    <script src='./../js/H5ComponentPoint.js'></script>
+    <!-- 引入柱图的资源-->
+    <script src='./../js/H5ComponentBar.js'></script>
     <script>
        var cfg = {
-            type    : 'point',
+            type    : 'bar',
             text    : '',
-            width   : 300,
-            height  : 300,
+            width   : 530,
+            height  : 600,
             center  : true,
             data    : [
-                ['A项', .4, 'green'],
-                ['B项', .2, 'yellow', 0, '-60%'],
-                ['C项', .1, 'red', 0, '110%' ]
+                ['Javascript', .4, '#ff7676'],
+                ['HTML/CSS', .2],
+                ['CSS3', .1],
+                ['HTML5', .2],
+                ['JQuery', .35],
+                ['AngularJS', .09]
             ],
             css     : {
-                bottom:0,
-                opacity:1,
+                top:100,
+                opacity:0
             },
             animateIn:{
-                bottom:'40%',
                 opacity:1,
+                top:200
             },
             animateOut:{
-                bottom:0,
                 opacity:0,
+                top:100
             },
        }
-       var h5 = new H5ComponentPoint( 'myName', cfg);
+       var h5 = new H5ComponentBar( 'myBarComponent', cfg);
        $('.iphone').append(h5);
+
        var leave = true;
        $('body').on('click',function(){
             leave = !leave;
