图表组件-折线图开发get

--- a/test/test_H5ComponentPolyline.html
+++ b/test/test_H5ComponentPolyline.html
@@ -52,6 +52,7 @@
             ],
             css     : {
                 top:100,
+                opacity:0
             },
             animateIn:{
                 opacity:1,
