第七章-图表组件雷达图开发get

--- a/test/test_H5ComponentRadar.html
+++ b/test/test_H5ComponentRadar.html
@@ -51,8 +51,8 @@
                 ['JQ', .5]
             ],
             css     : {
-                top:200,
-                // opacity:0
+                top:100,
+                opacity:0
             },
             animateIn:{
                 opacity:1,
