--- a/test/test_H5ComponentPie.html
+++ b/test/test_H5ComponentPie.html
@@ -44,7 +44,7 @@
             height  : 400,
             center  : true,
             data    : [
-                ['JS', .4, '#ff7676'],
+                ['JS', .4 , '#ff7676'],
                 ['PHP', .2],
                 ['CSS3', .05],
                 ['HTML5', .2],
@@ -52,16 +52,16 @@
             ],
             css     : {
                 top:200,
-                // opacity:0
+                opacity:0
             },
-            // animateIn:{
-            //     opacity:1,
-            //     top:200
-            // },
-            // animateOut:{
-            //     opacity:0,
-            //     top:100
-            // },
+            animateIn:{
+                opacity:1,
+                top:200
+            },
+            animateOut:{
+                opacity:0,
+                top:100
+            },
        }
        var h5 = new H5ComponentPei( 'myPieComponent', cfg);
        $('.iphone').append(h5);
