--- a/开发源码/index.html
+++ b/开发源码/index.html
@@ -58,18 +58,18 @@
         }
         /* 标题抖动 */
         .h5_component_name_slogan{
-            -webkit-animation:rock 2s infinite 5s;
+            -webkit-animation:rock 2s infinite 3s;
         }
         @-webkit-keyframes rock{
-            0%{ transition: rotate(0deg) }
-            5%{ transition: rotate(3deg) }
-            10%{ transition: rotate(-4deg) }
-            15%{ transition: rotate(3deg) }
-            20%{ transition: rotate(-2deg) }
-            25%{ transition: rotate(1deg) }
-            30%{ transition: rotate(-1deg) }
-            70%{ transition: rotate(0deg) }
-            100%{ transition: rotate(0deg) }  
+            0%  { transform:rotate(0deg)}
+            5%  { transform:rotate(3deg)}
+            10% { transform:rotate(-4deg)}
+            15% { transform:rotate(3deg)}
+            20% { transform:rotate(-2deg)}
+            25% { transform:rotate(1deg)}
+            30% { transform:rotate(-1deg)}
+            70% { transform:rotate(0deg)}
+            100%{ transform:rotate(0deg)}
         }
         /* 内容页标题 */
         .h5_component_name_caption{
@@ -99,17 +99,17 @@
                         css : {opacity:0},
                         animateIn  : {top : 113,opacity:1},
                         animateOut : {top : 0, opacity : 0},
-                        // delay:1000
+                        delay:500
                     })
                     .addComponent('slogan',{
                         center : true,
                         width :  365,
-                        height : 100,
+                        height : 98,
                         bg : './imgs/face_slogan.png',
-                        css : {opacity:0,top : 208, },
+                        css : { opacity:0, top:208},
                         animateIn  : {left :'50%',opacity :1},
                         animateOut : {left :0, opacity :0},
-                        // delay:2000
+                        delay:1000
                     })
                     .addComponent('face_img_left',{
                         width :  346,
@@ -118,7 +118,6 @@
                         css : {opacity:0,left :-50, bottom:-50 },
                         animateIn  : {left:0,bottom:0,opacity:1},
                         animateOut : {left :-50, bottom:-50,opacity:0 },
-                        // delay:1500
                     })
                     .addComponent('face_img_right',{
                         width :  324,
@@ -127,7 +126,6 @@
                         css : {opacity:0, right:-50, bottom:-50},
                         animateIn  : {right:0, bottom:0, opacity:1},
                         animateOut : {right:-50, bottom:-50, opacity:0},
-                        // delay:2000
                     })
                 .addPage()
                     .addComponent('caption',{text:'核心理念'})
@@ -143,7 +141,8 @@
                             fontSize:'26px'
                         },
                         animateIn:{opacity:1,top:160},
-                        animateOut:{opacity:0,top:240}
+                        animateOut:{opacity:0,top:240},
+                        delay:500
                     })
                     .addComponent('description',{
                         center:true,
@@ -151,18 +150,18 @@
                         height: 302,
                         bg:'imgs/description_bg.png',
                         css:{
-                            // opacity:0,
+                            opacity:0,
                             padding:'15px 10px 10px 10px',
                             color:'#fff',
                             fontSize:'15px',
                             lineHeight:'18px',
                             textAlign:'justify',
-                            top:240
+                            top:280
                         },
                         text:'席慕容-席慕蓉,当代著名画家、诗人、散文家。祖籍内蒙古察哈尔盟明安旗,是蒙古族王族之后。席慕容-席慕蓉,当代著名画家、诗人、散文家。祖籍内蒙古察哈尔盟明安旗,是蒙古族王族之后。席慕容-席慕蓉,当代著名画家、诗人、散文家',
-                        animateIn:{opacity:1,top:200},
-                        animateOut:{opacity:0,top:240},
-                        delay:500
+                        animateIn:{opacity:1,top:240},
+                        animateOut:{opacity:0,top:280},
+                        delay:2000
                     })
                     .addComponent('people',{
                         center:true,
@@ -170,15 +169,14 @@
                         height:305,
                         bg:'./imgs/p1_people.png',
                         css:{
-                            // opacity:0,
-                            bottom:50,
-
+                            opacity:0,
+                            bottom:-50,
                         },
                         animateIn:{opacity:1,bottom:50},
-                        animateOut:{opacity:0,bottom:0},
+                        animateOut:{opacity:0,bottom:-50},
                         delay:1000
                     })
-                .loader(2);
+                .loader();
             }
         }
         $(function(){
