--- a/开发源码/index.html
+++ b/开发源码/index.html
@@ -31,7 +31,6 @@
             注意下方引入<script><\/script>;遇到<\/script>会识别为script闭合标签，需要加入反斜杠。
 
             */
-            
             html.push('<script src="./js/H5Component'+res[s]+'.js"><\/script>');
             html.push('<link rel="stylesheet" href="css/H5Component'+ res[s] +'.css">');
 
@@ -82,12 +81,43 @@
             top:66px;
             color: #fff;
         }
+        /* 返回首页 */
+        .h5_component_name_back{
+            top:30px;
+            -webkit-animation:back 2s infinite 3s;
+        }
+        @-webkit-keyframes back{
+            50%{top:20px;}
+        }
     </style>
 
     <script>
         var page  = {
             init : function(){
                var h5 = new H5();
+
+               h5.whenAddPage = function(){
+                    this.addComponent('slide_up', {
+                        bg: 'imgs/footer.png',
+                        css: {
+                            opacity :0,
+                            left:0,
+                            bottom:0,
+                            width:'100%',
+                            height:'20px',
+                            zIndex:999
+                        },
+                        animateIn:{
+                            opacity:1,
+                            bottom:'-1px'
+                        },
+                        animateOut:{
+                            opacity:0,
+                            bottom:'-20px'
+                        },
+                        delay:500
+                    });
+               }
 
                h5
                 .addPage('face')
@@ -176,7 +206,45 @@
                         animateOut:{opacity:0,bottom:-50},
                         delay:1000
                     })
-                .loader();
+                .addPage('tail')
+                    .addComponent('logo',{
+                        center:true,
+                        width:422,
+                        height:106,
+                        bg:'./imgs/tail_logo.png',
+                        css:{top:240, opacity:0},
+                        animateIn:{opacity:1,top:210},
+                        animateOut:{opacity:0,top:240},
+                    })
+                    .addComponent('slogan',{
+                        center:true,
+                        width:314,
+                        height:46,
+                        bg:'./imgs/tail_slogan.png',
+                        css:{top:300, opacity:0},
+                        animateIn:{opacity:1,left:'50%'},
+                        animateOut:{opacity:0,left:'0%'},
+                        delay:1000
+                    })
+                    .addComponent('share',{
+                        width:128,
+                        height:120,
+                        bg:'./imgs/tail_share.png',
+                        css:{top:110, opacity:0, right:110},
+                        animateIn:{opacity:1,top:10, right:10},
+                        animateOut:{opacity:0,top:110,right:110},
+                        delay:1000
+                    })
+                    .addComponent('back',{
+                        center:true,
+                        width:52,
+                        height:50,
+                        bg:'./imgs/tail_back.png',
+                        onclick : function(){
+                            $.fn.fullpage.moveTo(1);
+                        }
+                    })
+                .loader(3);
             }
         }
         $(function(){
