--- a/开发源码/index.html
+++ b/开发源码/index.html
@@ -405,7 +405,7 @@
                             $.fn.fullpage.moveTo(1);
                         }
                     })
-                .loader(6);
+                .loader();
             }
         }
         $(function(){
