100%-第十章为全部理解

--- a/开发源码/index.html
+++ b/开发源码/index.html
@@ -553,7 +553,7 @@
                             $.fn.fullpage.moveTo(1);
                         }
                     })
-                // .loader();
+                .loader(['./imgs/tail_back.png','./imgs/tail_share.png','./imgs/tail_slogan.png']);
             }
         }
         $(function(){
