--- a/开发源码/test/test_H5ComponentPie.html
+++ b/开发源码/test/test_H5ComponentPie.html
@@ -44,11 +44,11 @@
             height  : 400,
             center  : true,
             data    : [
-                ['JS', .4 , '#ff7676'],
-                ['PHP', .2],
-                ['CSS3', .05],
-                ['HTML5', .2],
-                ['JQ', .15]
+                ['JS', .9 , '#ff7676'],
+                ['PHP', .03],
+                ['CSS3', .02],
+                ['HTML5', .02],
+                ['JQ', .03]
             ],
             css     : {
                 top:200,
@@ -63,7 +63,7 @@
                 top:100
             },
        }
-       var h5 = new H5ComponentPei( 'myPieComponent', cfg);
+       var h5 = new H5ComponentPie( 'myPieComponent', cfg);
        $('.iphone').append(h5);
 
        var leave = true;
